# core

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/scripts/: pypi_upload_check.py  smoke_install_npm.sh  smoke_install_python.sh  verify_npm_tarball.py  verify_python_artifacts.py
.github/workflows/: ci.yml  release.yml
docs/: STANDARD.md  format.md
fixtures/: check.oracle.json  corpus.rename.canonical.json  gene_phf19.canonical.json  gene_phf19.md  gene_phf19.ts-emit.md  search.oracle.json  search.tokenizer.json  similarity.oracle.json  similarity.vectors.json  traversal.oracle.json
python/: README.md  pyproject.toml
python/scripts/: gen_search_oracle.py  gen_similarity_oracle.py  gen_tokenizer_oracle.py
python/src/nodes/core/: corpus.py  frontmatter.py  ids.py  node.py  ranking.py  registry.py  relations.py  search.py  shapes.py  similarity.py  snapshot.py  store.py  structural_index.py
python/src/nodes/kernel/: corpus.py  errors.py  frontmatter.py  index.py  node.py  registry.py  relations.py  search.py  shapes.py  similarity.py  snapshot.py  store.py  structural_index.py
python/src/nodes/vocab/: __init__.py  predicates.py  source.py
python/tests/: _canonical.py  _fixtures_profile.py  test_check_parity.py  test_corpus.py  test_corpus_check.py  test_corpus_parity.py  test_corpus_persistence.py  test_corpus_persistence_rename.py  test_corpus_registry.py  test_corpus_search.py  test_corpus_similarity.py  test_corpus_traversal.py  test_errors.py  test_format_golden.py  test_frontmatter.py  test_ids.py  test_index.py  test_index_rebuild_equivalence.py  test_index_snapshot.py  test_namespace_layout.py  test_node.py  test_parity.py  test_pypi_upload_check.py  test_ranking.py  test_registry.py  test_registry_check.py  test_relations.py  test_release_scripts.py  test_search_index.py  test_search_parity.py  test_search_query.py  test_search_snapshot.py  test_search_tokenizer.py  test_shapes.py  test_similarity_foundations.py  test_similarity_parity.py  test_snapshot_io.py  test_snapshot_load.py  test_store.py  test_traversal_parity.py  (+5 more)
tests/: test_corpus.py  test_corpus_registry.py  test_format_golden.py  test_frontmatter.py  test_ids.py  test_index.py  test_index_rebuild_equivalence.py  test_registry.py  test_store.py  test_vocab_exports.py  test_vocab_kinds.py  test_vocab_source.py
ts/: README.md  biome.json  package-lock.json  package.json  tsconfig.json
ts/src/: corpus.ts  errors.ts  (+13 more)
(+150 files in other folders)
