[project]
name = "nodes-core"
import-names = ["nodes.core"]
import-namespaces = ["nodes"]
version = "0.1.1"
description = "Nodes core: a problem-agnostic knowledge substrate"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Keith Hughitt", email = "keith.hughitt@gmail.com" }]
requires-python = ">=3.11"
classifiers = ["Typing :: Typed"]
dependencies = [
  "pydantic>=2.0",
  "pyyaml>=6.0.3",
]

[project.urls]
Homepage = "https://github.com/nodes-dev/core"
Repository = "https://github.com/nodes-dev/core"
Issues = "https://github.com/nodes-dev/core/issues"

[build-system]
requires = ["hatchling>=1.30"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
core-metadata-version = "2.5"
packages = ["src/nodes"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 120

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"

[dependency-groups]
dev = [
    "pytest>=9.0",
    "ruff>=0.15.7",
    "pyright>=1.1.390",
]
